# mora

./: CMakeLists.txt  Makefile  README.md
src/lexer/: scanner.cpp  scanner.h  token.cpp  token.h
tests/: scanner_test.cpp
